linear-dafny/Test/modules/ResolveBadRefine.dfy.expect
ResolveBadRefine.dfy(27,13): Error: Module IntOnly expects IntTotalOrder, got T
1 resolution/type errors detected in ResolveBadRefine.dfy
